--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -57,6 +57,9 @@ body {
     h1 {
         margin-bottom: 0;
         line-height: rem(72);
+        @media(max-width: 1023px) {
+            line-height: 1.2;
+        }
     }
     p {
         padding-top: 18px;
@@ -66,6 +69,7 @@ body {
         color: $black;
     }
 }
+
 .header-block {
     margin-bottom: 32px;
     font-size: 32px;
@@ -73,11 +77,17 @@ body {
     line-height: 1.25;
     color: $black;
     position: relative;
+    @media(max-width: 1023px) {
+        margin-bottom: 28px;
+    }
 
     &__btn {
         position: absolute;
         top: 8px;
         right: 0;
+        @media(max-width: 1023px) {
+            display: none;
+        }
 
         .btn {
             display: block;
@@ -131,6 +141,9 @@ body {
     bottom: 20px;
     left: 0;
     margin: auto;
+    @media(max-width: 1023px) {
+        bottom: 0;
+    }
 
     &-bullet {
         @include transition();
@@ -140,9 +153,15 @@ body {
         border-radius: 50%;
         background-color: fade_out($white, .7);
         cursor: pointer;
+        @media(max-width: 1023px) {
+            background-color: $silver;
+        }
 
         &.swiper-pagination-bullet-active {
             background-color: $white;
+            @media(max-width: 1023px) {
+                background-color: $ctrl-black;
+            }
         }
     }
 }
