--- a/src/blocks/modules/video/video.scss
+++ b/src/blocks/modules/video/video.scss
@@ -1,5 +1,8 @@
 .video {
     width: 100%;
+    @media(max-width: 1023px) {
+        width: 256px;
+    }
 
     &__body {
         position: relative;
@@ -35,8 +38,13 @@
             width: 72px;
             height: 72px;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='72' height='72' viewBox='0 0 72 72'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0H72V72H0z'/%3E%3Ccircle cx='36' cy='36' r='36' fill='%23FFF'/%3E%3Cpath fill='%231A1A1A' d='M29.555 21.036l21.197 14.132c.46.306.584.927.277 1.387-.073.11-.167.204-.277.277L29.555 50.964c-.46.306-1.08.182-1.387-.278-.11-.164-.168-.357-.168-.555V21.87c0-.553.448-1 1-1 .197 0 .39.058.555.167z'/%3E%3C/g%3E%3C/svg%3E");
+            background-size: contain;
             border-radius: 50%;
             transform: translate(-50%, -50%);
+            @media(max-width: 1023px) {
+                width: 56px;
+                height: 56px;
+            }
         }
 
         &:after {
