--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -1,5 +1,8 @@
 .news {
     margin-bottom: 76px;
+    @media(max-width: 1279px) {
+        margin-bottom: 60px;
+    }
 
     &__row {
         margin-right: -32px;
@@ -21,21 +24,38 @@
             &--main {
                 height: 440px;
                 max-height: none;
+                @media (max-width: 1279px) {
+                    height: 360px;
+                    margin-bottom: 24px;
+                }
             }
         }
 
         .btn {
             width: 352px;
             margin: auto;
+            @media(max-width: 1023px) {
+                width: 100%;
+            }
         }
 
         .news-slider {
             position: relative;
             height: 440px;
             margin-bottom: 32px;
+            @media (max-width: 1279px) {
+                height: 400px;
+                margin-bottom: 24px;
+            }
+            @media(max-width: 1023px) {
+                height: 414px;
+            }
 
             .swiper-container {
                 height: 100%;
+                @media(max-width: 1023px) {
+                    padding-bottom: 24px;
+                }
             }
 
             .swiper-wrapper {
@@ -59,6 +79,15 @@
                         font-weight: $font-weight-bold;
                         line-height: 1.2;
                         color: $white;
+                        @media(max-width: 1279px) {
+                            font-size: 2rem;
+                            line-height: 1.25;
+                        }
+                        @media(max-width: 1023px) {
+                            width: 100%;
+                            font-size: rem(20);
+                            line-height: 1.2;
+                        }
                     }
 
                     .card-text {
@@ -66,6 +95,9 @@
                         font-size: rem(16);
                         line-height: 1.25;
                         color: $white;
+                        @media(max-width: 1023px) {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -112,6 +144,9 @@
 
         .swiper-slide {
             height: auto;
+            @media(max-width: 1023px) {
+                width: auto;
+            }
         }
     }
 }
@@ -125,6 +160,12 @@
         @media (max-width: 1280px) {
             margin-right: -24px;
             margin-left: -24px;
+        }
+    }
+
+    .swiper-slide {
+        @media(max-width: 1023px) {
+            width: auto;
         }
     }
 }
@@ -153,6 +194,12 @@
         .swiper-wrapper {
             align-items: stretch;
         }
+
+        .swiper-slide {
+            @media(max-width: 1023px) {
+                width: auto;
+            }
+        }
     }
 }
 
@@ -161,8 +208,11 @@
 
     &__row {
         width: 100%;
-        max-width: 66.6667%;
+        max-width: 725px;
         margin: auto;
+        @media (max-width: 1279px) {
+            max-width: 616px;
+        }
     }
 
     &__item {
