--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -3,6 +3,9 @@
     @media(max-width: 1279px) {
         margin-bottom: 60px;
     }
+    @media(max-width: 1023px) {
+        margin-bottom: 40px;
+    }
 
     &__row {
         margin-right: -32px;
@@ -60,6 +63,7 @@
 
             .swiper-wrapper {
                 height: 100%;
+
             }
 
             .swiper-slide {
@@ -104,6 +108,9 @@
 
             .swiper-button {
                 display: none;
+                @media (max-width: 1023px) {
+                    margin-top: -12px;
+                }
                 &.show {
                     display: block;
                 }
@@ -121,6 +128,10 @@
 
 .detours {
     margin-bottom: 64px;
+    @media(max-width: 1023px) {
+        margin-bottom: 40px;
+    }
+
     &__row {
         margin-right: -32px;
         margin-left: -32px;
@@ -153,6 +164,9 @@
 
 .video-gallery {
     margin-bottom: 64px;
+    @media(max-width: 1023px) {
+        margin-bottom: 48px;
+    }
 
     &__row {
         margin-right: -32px;
@@ -172,6 +186,9 @@
 
 .articles {
     margin-bottom: 64px;
+    @media(max-width: 1023px) {
+        margin-bottom: 40px;
+    }
 
     &__row {
         margin-right: -32px;
@@ -196,6 +213,7 @@
         }
 
         .swiper-slide {
+            height: auto;
             @media(max-width: 1023px) {
                 width: auto;
             }
@@ -205,6 +223,9 @@
 
 .tags {
     margin-bottom: 80px;
+    @media(max-width: 1023px) {
+        margin-bottom: 40px;
+    }
 
     &__row {
         width: 100%;
@@ -213,6 +234,15 @@
         @media (max-width: 1279px) {
             max-width: 616px;
         }
+    }
+
+    &-col {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        max-width: 760px;
+        margin: 0 auto;
     }
 
     &__item {
