--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -38,8 +38,7 @@
                 </a>
             </div>
             <!--        первая большая новость конец-->
-        </div>
-        <div class="row news__row">
+
             <div class="col-lg-4 col-md-12">
                 <a href="/" class="card">
                     <picture class="card-img">
@@ -127,8 +126,7 @@
                     </div>
                 </a>
             </div>
-        </div>
-        <div class="row news__row">
+
             <div class="col-lg-6 col-md-12">
                 <a href="/" class="card card--image card--big">
                     <picture class="card-img">
@@ -202,8 +200,7 @@
                     </div>
                 </a>
             </div>
-        </div>
-        <div class="row news__row">
+
             <div class="col-lg-4 col-md-12">
                 <a href="/" class="card">
                     <picture class="card-img">
@@ -271,8 +268,7 @@
                     </div>
                 </a>
             </div>
-        </div>
-        <div class="row news__row">
+
             <div class="col-12 news-slider js-slider-big">
                 <div class="swiper-container">
                     <div class="swiper-wrapper no-swiping">
@@ -381,8 +377,7 @@
                 <div class="swiper-button swiper-button-prev"></div>
                 <div class="swiper-button swiper-button-next"></div>
             </div>
-        </div>
-        <div class="row news__row">
+
             <div class="col-12">
                 <a href="#0" class="btn btn--dark">Показать еще</a>
             </div>
@@ -731,15 +726,17 @@
     </section>
 
     <div class="tags">
-        <div class="row tags__row justify-content-center">
-            <a href="#0" class="tags__item">Новость</a>
-            <a href="#0" class="tags__item">Мероприятие</a>
-            <a href="#0" class="tags__item">Конкурс</a>
-            <a href="#0" class="tags__item">Результаты работы</a>
-            <a href="#0" class="tags__item">Интервью</a>
-            <a href="#0" class="tags__item">Лонгрид</a>
-            <a href="#0" class="tags__item">СМИ</a>
-            <a href="#0" class="tags__item">Важное сообщение</a>
+        <div class="row">
+            <div class="col-12 tags-col">
+                <a href="#0" class="tags__item">Новость</a>
+                <a href="#0" class="tags__item">Мероприятие</a>
+                <a href="#0" class="tags__item">Конкурс</a>
+                <a href="#0" class="tags__item">Результаты работы</a>
+                <a href="#0" class="tags__item">Интервью</a>
+                <a href="#0" class="tags__item">Лонгрид</a>
+                <a href="#0" class="tags__item">СМИ</a>
+                <a href="#0" class="tags__item">Важное сообщение</a>
+            </div>
         </div>
     </div>
 
