--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -156,6 +156,9 @@
     &--big {
         .card-img {
             max-height: 350px;
+            @media(max-width: 1023px) {
+                max-height: none;
+            }
         }
     }
 
@@ -303,7 +306,7 @@
             max-height: 168px
         }
         @media(max-width: 1023px) {
-            max-height: 200px;
+            max-height: none;
             flex-basis: auto;
         }
 
@@ -527,8 +530,9 @@
     padding: 16px 20px 20px;
     border-radius: 5px;
     background-color: $white;
+    box-sizing: border-box;
     @media(max-width: 1023px) {
-        width: 216px;
+        width: 256px;
     }
 
     &:hover {
