--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -39,7 +39,7 @@
             </div>
             <!--        первая большая новость конец-->
 
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -65,7 +65,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -95,7 +95,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card card--image">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -127,7 +127,7 @@
                 </a>
             </div>
 
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-6 col-12">
                 <a href="/" class="card card--image card--big">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -167,7 +167,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-6 col-12">
                 <a href="/" class="card card--big">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -201,7 +201,7 @@
                 </a>
             </div>
 
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -224,7 +224,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
@@ -246,7 +246,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-6 col-12">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
