--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -1,6 +1,24 @@
 .main-page {
     padding-top: 32px;
 
+    .news__row .news-slider {
+        height: 400px;
+
+        @media (max-width: 1280px) {
+            height: 328px;
+        }
+
+        .swiper-slide {
+            .card--image {
+                .card-text {
+                    font-size: rem(28);
+                    line-height: 1.29;
+                    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+                }
+            }
+        }
+    }
+
     &__links {
         display: flex;
         flex-wrap: wrap;
@@ -26,6 +44,7 @@
                 .normal {
                     display: none;
                 }
+
                 .hover {
                     display: block;
                 }
@@ -67,6 +86,7 @@
         .swiper-slide {
             max-width: 296px;
         }
+
         .swiper-button {
             margin-top: -24px;
         }
