--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,7 +9,8 @@
                     <div class="swiper-slide">
                         <a href="/" class="card card--image">
                             <picture class="card-img">
-                                <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                <!--[if IE 9]>
+                                <video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
                                 <img src="img/AA5J7280.jpg" type="image/jpg" title="Новые технологии на ВМЗ в 2019"
@@ -17,11 +18,9 @@
                             </picture>
                             <div class="card-body">
                                 <div class="card-tags"><span class="badge">ВМЗ</span></div>
-                                <h5 class="card-title">Новые технологии на ВМЗ в 2019</h5>
-                                <p class="card-text">Литейно-прокатный комплекс Выксунского металлургического завода
-                                    (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической
-                                    компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн
-                                    горячекатанного рулонного проката, став важным звеном…</p>
+                                <h5 class="card-title">Лучшие в металлургии</h5>
+                                <p class="card-text">Производственная система сразу трех заводов ОМК удостоена
+                                    медалей Toyota</p>
                             </div>
                             <div class="card-footer">
                                 <div class="card-date">10 фев</div>
@@ -114,10 +113,10 @@
     </div>
 
     <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-xl-10 offset-xl-1 col-lg-12">
             <div class="main-page__links">
                 <a href="" class="main-page__link">
-            <span class="main-page__link-img">
+                     <span class="main-page__link-img">
                 <img src="img/main-page_1.png" alt="" class="normal">
                 <img src="img/main-page_12.png" alt="" class="hover">
             </span>
@@ -131,24 +130,24 @@
                     <span class="main-page__link-text">Горячая линия</span>
                 </a>
                 <a href="" class="main-page__link">
-            <span class="main-page__link-img">
-                <img src="img/main-page_3.png" alt="" class="normal">
-                <img src="img/main-page_32.png" alt="" class="hover">
-            </span>
+                    <span class="main-page__link-img">
+                        <img src="img/main-page_3.png" alt="" class="normal">
+                        <img src="img/main-page_32.png" alt="" class="hover">
+                    </span>
                     <span class="main-page__link-text">Служба безопасности</span>
                 </a>
                 <a href="" class="main-page__link">
-            <span class="main-page__link-img">
-                <img src="img/main-page_4.png" alt="" class="normal">
-                <img src="img/main-page_42.png" alt="" class="hover">
-            </span>
+                    <span class="main-page__link-img">
+                        <img src="img/main-page_4.png" alt="" class="normal">
+                        <img src="img/main-page_42.png" alt="" class="hover">
+                    </span>
                     <span class="main-page__link-text">Предложить идею</span>
                 </a>
                 <a href="" class="main-page__link">
-            <span class="main-page__link-img">
-                <img src="img/main-page_5.png" alt="" class="normal">
-                <img src="img/main-page_52.png" alt="" class="hover">
-            </span>
+                    <span class="main-page__link-img">
+                        <img src="img/main-page_5.png" alt="" class="normal">
+                        <img src="img/main-page_52.png" alt="" class="hover">
+                    </span>
                     <span class="main-page__link-text">Поддержка</span>
                 </a>
             </div>
@@ -163,50 +162,61 @@
                         <div class="swiper-slide">
                             <a href="#" class="main-page__slider-item">
                                 <picture class="main-page__slider-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/main_page_img_1.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ" alt="Конкурс работников производства ВМЗ">
+                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ"
+                                         alt="Конкурс работников производства ВМЗ">
                                 </picture>
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="#" class="main-page__slider-item">
                                 <picture class="main-page__slider-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/main_page_img_2.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/main_page_img_2.png" title="Инструкция по профилактике короновируса на производстве" alt="Инструкция по профилактике короновируса на производстве">
+                                    <img src="img/main_page_img_2.png"
+                                         title="Инструкция по профилактике короновируса на производстве"
+                                         alt="Инструкция по профилактике короновируса на производстве">
                                 </picture>
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="#" class="main-page__slider-item">
                                 <picture class="main-page__slider-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/main_page_img_3.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/main_page_img_3.png" title="Фестиваль «ОМК — детям»" alt="Фестиваль «ОМК — детям»">
+                                    <img src="img/main_page_img_3.png" title="Фестиваль «ОМК — детям»"
+                                         alt="Фестиваль «ОМК — детям»">
                                 </picture>
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="#" class="main-page__slider-item">
                                 <picture class="main-page__slider-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/main_page_img_4.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/main_page_img_4.png" title="Дни рождения сотрудников ВМЗ в апреле" alt="Дни рождения сотрудников ВМЗ в апреле">
+                                    <img src="img/main_page_img_4.png" title="Дни рождения сотрудников ВМЗ в апреле"
+                                         alt="Дни рождения сотрудников ВМЗ в апреле">
                                 </picture>
                             </a>
                         </div>
                         <div class="swiper-slide">
                             <a href="#" class="main-page__slider-item">
                                 <picture class="main-page__slider-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                    <!--[if IE 9]>
+                                    <video style="display: none;"><![endif]-->
                                     <source srcset="img/main_page_img_1.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ" alt="Конкурс работников производства ВМЗ">
+                                    <img src="img/main_page_img_1.png" title="Конкурс работников производства ВМЗ"
+                                         alt="Конкурс работников производства ВМЗ">
                                 </picture>
                             </a>
                         </div>
