--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -10,10 +10,21 @@
 
         .swiper-slide {
             .card--image {
+                .card-title {
+                    @media (max-width: 1280px) {
+                        font-size: rem(32);
+                        line-height: 1.25;
+                    }
+                }
+
                 .card-text {
                     font-size: rem(28);
                     line-height: 1.29;
                     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+                    @media (max-width: 1280px) {
+                        font-size: rem(16);
+                        line-height: 1.25;
+                    }
                 }
             }
         }
