desktop info systems no scrolls styling

--- a/src/templates/pages/information-systems.html
+++ b/src/templates/pages/information-systems.html
@@ -8,142 +8,221 @@
         <h1>Информационные системы</h1>
     </div>
 
-    <div class="row">
+    <div class="row news__row search__row">
         <div class="col-12">
             {% include 'information-systems-search/information-systems-search.html' %}
         </div>
     </div>
 
-    <div class="row">
-        <div class="header-block">
-            <h2>Сервисы</h2>
+    <div class="row news__row">
+        <div class="col-12">
+            <div class="header-block">
+                <h2>Сервисы</h2>
+            </div>
         </div>
     </div>
 
     <div class="row news__row">
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="ОМК Docs" 
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="Мониторинг 5С-офис"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
-                <span class="name">Мониторинг  5С-офис</span>
+                <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Следующий формат"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Следующий формат</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Q3MET"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Q3MET</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="ОМК Docs" 
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="Мониторинг 5С-офис"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
-                <span class="name">Мониторинг  5С-офис</span>
+                <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Следующий формат"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Следующий формат</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Q3MET"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Q3MET</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="ОМК Docs" 
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0"
+            title="Мониторинг 5С-офис"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
-                <span class="name">Мониторинг  5С-офис</span>
+                <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Следующий формат"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Следующий формат</span>
             </a>
         </div>
         <div class="col-md-3">
-            <a href="#0" class="info-system__services">
+            <a href="#0" 
+            title="Q3MET"
+            class="info-system__services">
                 <span class="avatar"><img src="" alt=""></span>
                 <span class="name">Q3MET</span>
             </a>
         </div>
 
         <div class="col-12">
-            <a href="#0" class="btn btn--dark">Ещё 87 сервисов</a>
+            <a href="#0" class="btn btn--dark more-services">Ещё 87 сервисов</a>
         </div>
     </div>
 
-    <div class="row">
-        <div class="header-block">
-            <h2>Системы</h2>
+    <div class="row news__row">
+        <div class="col-12">
+            <div class="header-block">
+                <h2>Системы</h2>
+            </div>
         </div>
     </div>
 
     <div class="row news__row">
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+            <a href="#0"
+            title="Производственный проект «South Stream»" 
+            class="info-system__sys">
+                Производственный проект «South Stream»
+            </a>
         </div>
         <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Отчёт по фактически отработанному времени</a>
+            <a href="#0"
+            title="Отчёт по фактически отработанному времени" 
+            class="info-system__sys">
+                Отчёт по фактически отработанному времени
+            </a>
         </div>
-        <div class="col-md-6">
-            <a href="#0" class="info-system__sys">Производственный проект «South Stream»</a>
+    </div>
+
+    <div class="row news__row">
+        <div class="col-12">
+            <div class="mail">Если не хватает какой-то системы или сервиса, напишите на portal@omk.ru</div>
         </div>
     </div>
 </div>
