--- a/src/templates/pages/information-systems.html
+++ b/src/templates/pages/information-systems.html
@@ -4,8 +4,10 @@
     <div class="row">
         {% include 'breadcrumbs/breadcrumbs.html' %}
     </div>
-    <div class="row main-header">
-        <h1>Информационные системы</h1>
+    <div class="row news__row main-header">
+        <div class="col-12">
+            <h1>Информационные системы</h1>
+        </div>
     </div>
 
     <div class="row news__row search__row">
